// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixed Income Transactions component should call icon component 1`] = `
<styled.span
  color="#374654"
  cursorPointer={0}
  fixCrossAxisAlign={null}
  height={null}
  width={null}
>
  <EmptyWallet />
</styled.span>
`;

exports[`Fixed Income Transactions component should match snapshot 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <LoadableComponent
      search={[MockFunction]}
    />
    <Row>
      <Column>
        <AssetTable
          isEquity={false}
          shimmerLoading={
            Object {
              "loading": undefined,
              "rows": 10,
            }
          }
          styleName={false}
          title=""
          transactions={
            Array [
              Object {
                "assetName": "COMPROMISSADA",
                "date": "2016-05-02",
                "grossValue": 87570.15,
                "incomeTax": 0,
                "iof": 0,
                "netValue": 87570.15,
                "type": "COMPRA",
              },
              Object {
                "assetName": "COMPROMISSADA",
                "date": "2016-05-11",
                "grossValue": -87876.11,
                "incomeTax": 68.84,
                "iof": 0,
                "netValue": -87807.27,
                "type": "RESGATE ANTECIPADO",
              },
              Object {
                "assetName": "LCA - Pós",
                "date": "2017-03-02",
                "grossValue": -19984.22,
                "incomeTax": 0,
                "iof": 0,
                "netValue": -19984.22,
                "type": "VENCIMENTO",
              },
            ]
          }
        />
      </Column>
    </Row>
    <Pagination
      activePage={1}
      initialPage={1}
      onChangePage={[MockFunction]}
      pageRange={5}
      pageSize={10}
      pageTotal={0}
    />
    <LinkCard
      dataTest="LinkToSimplified"
      fontSize={14}
      iconType="FiLoader"
      noSpan={true}
      to="/investments/overview?menu=movements&from=fixedIncome"
      withUnderline={true}
    />
  </Container>
</styled.div>
`;

exports[`Fixed Income Transactions component should match snapshot with empty page state 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <DefaultContent
      Icon={[Function]}
      data-test="Empty_Position"
      secondaryTexts={
        Array [
          undefined,
        ]
      }
    />
  </Container>
</styled.div>
`;

exports[`Fixed Income Transactions component should match snapshot with loading 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <LoadableComponent
      search={[MockFunction]}
    />
    <Row>
      <Column>
        <AssetTable
          isEquity={false}
          shimmerLoading={
            Object {
              "loading": true,
              "rows": 10,
            }
          }
          styleName={false}
          title=""
          transactions={
            Array [
              Object {
                "assetName": "COMPROMISSADA",
                "date": "2016-05-02",
                "grossValue": 87570.15,
                "incomeTax": 0,
                "iof": 0,
                "netValue": 87570.15,
                "type": "COMPRA",
              },
              Object {
                "assetName": "COMPROMISSADA",
                "date": "2016-05-11",
                "grossValue": -87876.11,
                "incomeTax": 68.84,
                "iof": 0,
                "netValue": -87807.27,
                "type": "RESGATE ANTECIPADO",
              },
              Object {
                "assetName": "LCA - Pós",
                "date": "2017-03-02",
                "grossValue": -19984.22,
                "incomeTax": 0,
                "iof": 0,
                "netValue": -19984.22,
                "type": "VENCIMENTO",
              },
            ]
          }
        />
      </Column>
    </Row>
    <Pagination
      activePage={1}
      initialPage={1}
      onChangePage={[MockFunction]}
      pageRange={5}
      pageSize={10}
      pageTotal={0}
    />
  </Container>
</styled.div>
`;

exports[`Fixed Income Transactions component should match snapshot without Fixed Income Transactions 1`] = `
<styled.div
  data-test="Transactions_Funds"
>
  <Container>
    <LoadableComponent
      search={[MockFunction]}
    />
    <Row>
      <Column>
        <AssetTable
          isEquity={false}
          shimmerLoading={
            Object {
              "loading": undefined,
              "rows": 10,
            }
          }
          styleName={false}
          title=""
          transactions={Array []}
        />
      </Column>
    </Row>
    <Pagination
      activePage={1}
      initialPage={1}
      onChangePage={[MockFunction]}
      pageRange={5}
      pageSize={10}
      pageTotal={0}
    />
    <LinkCard
      dataTest="LinkToSimplified"
      fontSize={14}
      iconType="FiLoader"
      noSpan={true}
      to="/investments/overview?menu=movements&from=fixedIncome"
      withUnderline={true}
    />
  </Container>
</styled.div>
`;
